# serializer version: 1
# name: test_anonymous_post_forum_rating_view[anonymous_post_forum_rating_view]
  '''
  <html><head></head><body><div class="c-box mb-5" id="rating-area">
      <h2 class="mt-3">Cette fiche vous a-t-elle été utile ?</h2>
      
          <div aria-label="Notation de la fiche pratique" class="btn-group btn-group-lg" role="group">
              
                  <div class="btn btn-sm btn-ico">
                      
                          <i class="ri-star-fill"></i>
                      
                  </div>
              
                  <div class="btn btn-sm btn-ico">
                      
                          <i class="ri-star-fill"></i>
                      
                  </div>
              
                  <div class="btn btn-sm btn-ico">
                      
                          <i class="ri-star-fill"></i>
                      
                  </div>
              
                  <div class="btn btn-sm btn-ico">
                      
                          <i class="ri-star-fill"></i>
                      
                  </div>
              
                  <div class="btn btn-sm btn-ico">
                      
                          <i class="ri-star-fill"></i>
                      
                  </div>
              
          </div>
          
      
  </div>
  </body></html>
  '''
# ---
# name: test_authenticated_post_forum_rating_view[authenticated_post_forum_rating_view]
  '''
  <html><head></head><body><div class="c-box mb-5" id="rating-area">
      <h2 class="mt-3">Cette fiche vous a-t-elle été utile ?</h2>
      
          <div aria-label="Notation de la fiche pratique" class="btn-group btn-group-lg" role="group">
              
                  <div class="btn btn-sm btn-ico">
                      
                          <i class="ri-star-fill"></i>
                      
                  </div>
              
                  <div class="btn btn-sm btn-ico">
                      
                          <i class="ri-star-line"></i>
                      
                  </div>
              
                  <div class="btn btn-sm btn-ico">
                      
                          <i class="ri-star-line"></i>
                      
                  </div>
              
                  <div class="btn btn-sm btn-ico">
                      
                          <i class="ri-star-line"></i>
                      
                  </div>
              
                  <div class="btn btn-sm btn-ico">
                      
                          <i class="ri-star-line"></i>
                      
                  </div>
              
          </div>
          
      
  </div>
  </body></html>
  '''
# ---
